<resources>

    <!--LOGIN-->
    <string name="login_facebook">Connexion avec Facebook</string>
    <string name="login_google">Connexion avec Google</string>
    <string name="login_twitter">Connexion avec Twitter</string>
    <string name="login_username">Connexion avec identifiants</string>
    <string name="login_network_error">Connexion au service impossible ( vérifiez votre connexion internet ).</string>


    <!--LOGIN WITH EMAIL-->
    <string name="login_hint_email">adresse@mail.com</string>
    <string name="login_hint_password" translatable="false">*********</string>
    <string name="login_title">Se connecter</string>
    <string name="login_title_italic"><u>Se connecter</u></string>
    <string name="signup_title">S\'inscrire</string>
    <string name="signup_title_italic"><u>S\'inscrire</u></string>
    <string name="login_create_account"><u>Créer mon compte</u></string>
    <string name="login_missing_field">Veuillez renseignez une adresse mail et un mot de passe correct</string>
    <string name="login_fail">Combinaison incorrect (Connexion internet requise)</string>
    <string name="login_fail_creation">Creation de compte impossible, cette adresse email est peut-être déjà utilisée ou votre mot de passe contient moins de 6 caractères</string>


    <!--DASHBOARD-->
    <string name="app_name">Go4Lunch</string>
    <string name="menu_map">Vue Carte</string>
    <string name="menu_list">Vue Liste</string>
    <string name="menu_workmates">Collègues</string>
    <string name="toolbar_search">Rechercher</string>
    <string name="location_button">Centrer vue</string>
    <string name="toolbar_query_too_short">Veuillez entrer au moins 3 caractères pour lancer la recherche</string>
    <string name="searchview_hint">Chercher un restaurant…</string>


    <!--FACEBOOK LOGIN-->
    <string name="facebook_app_id" translatable="false">950434559094038</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb950434559094038</string>

    <!--DRAWER-->
    <string name="drawer_home">ACCUEIL</string>
    <string name="drawer_lunch">MON REPAS</string>
    <string name="drawer_settings">PARAMÈTRES</string>
    <string name="drawer_login">CONNEXION</string>
    <string name="drawer_logout">DÉCONNEXION</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="drawer_header_name" translatable="false">%1$s</string>
    <string name="drawer_header_email" translatable="false">%1$s</string>
    <string name="drawer_no_lunch">Tu n\'as pas encore choisi de restaurant !</string>


    <!--MAP-->
    <string name="map_here">VOUS</string>
    <string name="map_no_permission">L\'accès à votre position est nécessaire pour utiliser l\'application</string>
    <string name="map_response_error">Une erreur a été rencontrée lors de la recherche de restaurants ( vérifiez votre connexion internet ).</string>
    <string name="map_data_format_error">Une erreur a été rencontrée lors de la lecture des restaurants ! </string>
    <string name="map_not_found">Aucun résultat !</string>
    <string name="map_no_restaurant">Ce n\'est pas un restaurant!</string>


    <!--DETAILS-->
    <string name="list_workmates_empty">Personne ne mange ici</string>
    <string name="details_no_info">Cette information n\'est pas renseignée</string>


    <!--WORKMATES-->
    <string name="workmate_text">%1$s mange %2$s</string>
    <string name="workmate_text_details">%1$s mange ici !</string>
    <string name="workmate_text_no_lunch">%1$s n\'a pas encore choisi </string>
    <string name="workmate_execution_error">Récupération des collègues impossible( vérifiez votre connexion internet ).</string>
    <string name="workmate_interrupted_error">Récupération des collègues interrompue. Veuillez réessayer.</string>

    <!--LIST VIEW -->
    <string name="item_restaurant_address" translatable="false">%1$s</string>
    <string name="item_restaurant_name" translatable="false">%1$s</string>
    <string name="item_restaurant_distance_meters" translatable="false">%,.2f m</string>
    <string name="item_restaurant_distance_kilometers" translatable="false">%,.0f, %,.0f km</string>
    <string name="item_restaurant_attendees" translatable="false">( %1$d )</string>
    <string name="item_restaurant_hours">Ouvert jusqu\'à %1$s</string>
    <string name="item_restaurant_no_info">Non renseigné</string>


    <!--API INFOS -->
    <string name="query_radius" translatable="false">2000</string>
    <string name="query_restaurant" translatable="false">restaurant</string>
    <string name="place_photo_url" translatable="false">https://maps.googleapis.com/maps/api/place/photo?key=%1$s&amp;photoreference=%2$s&amp;maxwidth=500</string>

    <!--CONTENT DESCRIPTION -->
    <string name="cutlery_image">image de couverts</string>

    <!--NOTIFICATION -->
    <string name="notification_channel_id" translatable="false">myCanal</string>
    <string name="notification_channel_title" translatable="false">Go4Lunch Event</string>
    <string name="notification_channel_desc" translatable="false">This is a test channel</string>
    <string name="notification_title">À table !</string>
    <string name="notification_content">Direction %1$s à %2$s avec %3$s</string>
    <string name="notification_content_no_restaurant">Renseignez-vous sur les restaurants à proximité !</string>
    <string name="notification_content_no_workmates">Direction %1$s à %2$s</string>


</resources>