<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/restaurant"
    tools:context=".views.activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_food_logo"
        app:layout_constraintBottom_toTopOf="@id/loginFacebookButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginFacebookButton"
        android:layout_width="300dp"
        android:layout_height="60sp"
        android:backgroundTint="@color/blue_facebook"
        android:drawableLeft="@drawable/ic_facebook_logo"
        android:drawablePadding="50dp"
        android:drawableTint="@color/white"
        android:text="@string/login_facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginGoogleButton"
        android:layout_width="300dp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red_google"
        android:drawableLeft="@drawable/ic_google_logo"
        android:drawableTint="@color/white"

        android:text="@string/login_google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginFacebookButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginTwitterButton"
        android:layout_width="300dp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue_twitter"
        android:drawableLeft="@drawable/ic_twitter_logo"
        android:drawableTint="@color/white"
        android:text="@string/login_twitter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginGoogleButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginUsernameButton"
        android:layout_width="300dp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_purple"
        android:drawableLeft="@drawable/ic_profile"
        android:drawableTint="@color/white"
        android:text="@string/login_username"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTwitterButton" />


</androidx.constraintlayout.widget.ConstraintLayout>